chore: application.properties 환경변수 로드 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=guseok_be
 
+spring.config.import=classpath:/application-db.properties
+
 # DataSource
 spring.datasource.url=${DB_URL}
 spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
