controller, entity, repsository, service, securityconfig, webconfig

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=guseok_be
 
+#External properties file include
+spring.config.import=application-db.properties
+
 # DataSource
 spring.datasource.url=${DB_URL}
 spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
